--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
+    "@supabase/supabase-js": "^2.90.1",
+    "framer-motion": "^12.26.1",
+    "gsap": "^3.14.2",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
